--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/nav_graph.xml">
+            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph.xml"
+            app:startDestination="@id/cryptoListFragment">
 
+    <fragment android:id="@+id/cryptoListFragment" android:name="com.yoonek.cryptoapp.cryptolist.CryptoListFragment"
+              android:label="fragment_crypto_list" tools:layout="@layout/fragment_crypto_list">
+        <action android:id="@+id/action_cryptoListFragment_to_cryptoDetailFragment"
+                app:destination="@id/cryptoDetailFragment"/>
+    </fragment>
+    <fragment android:id="@+id/cryptoDetailFragment"
+              android:name="com.yoonek.cryptoapp.cryptodetail.CryptoDetailFragment"
+              android:label="fragment_crypto_detail" tools:layout="@layout/fragment_crypto_detail">
+        <action android:id="@+id/action_cryptoDetailFragment_to_cryptoListFragment"
+                app:destination="@id/cryptoListFragment"/>
+    </fragment>
 </navigation>
