--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,5 +14,7 @@
               android:label="fragment_crypto_detail" tools:layout="@layout/fragment_crypto_detail">
         <action android:id="@+id/action_cryptoDetailFragment_to_cryptoListFragment"
                 app:destination="@id/cryptoListFragment"/>
+        <argument android:name="selectedCryptoName" app:argType="string"/>
+
     </fragment>
 </navigation>
