--- a/app/src/main/res/layout/crypto_item.xml
+++ b/app/src/main/res/layout/crypto_item.xml
@@ -1,35 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_name"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/crypto_icon" android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/crypto_icon" app:layout_constraintEnd_toStartOf="@+id/crypto_price"
-            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
+        android:id="@+id/tv_name"
+        style="@style/Text.Primary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/primaryTextColor"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/crypto_price"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/crypto_icon"
+        app:layout_constraintTop_toTopOf="@+id/crypto_icon"
+        tools:text="Bitcoin" />
+
     <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp" tools:srcCompat="@tools:sample/avatars[9]"
-            android:id="@+id/crypto_icon"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+        android:id="@+id/crypto_icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars[9]" />
+
     <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/crytoUpdateDate" app:layout_constraintStart_toEndOf="@+id/crypto_icon"
-            android:layout_marginStart="12dp" app:layout_constraintTop_toBottomOf="@+id/tv_name"
-            android:layout_marginTop="8dp"/>
+        android:id="@+id/crytoSymbol"
+        style="@style/Text.Secondary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/secondaryTextColor"
+        app:layout_constraintStart_toEndOf="@+id/crypto_icon"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
     <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/crypto_price" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_name"/>
+        android:id="@+id/crypto_price"
+        style="@style/Text.Primary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/primaryTextColor"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="$ 200,45" />
 </androidx.constraintlayout.widget.ConstraintLayout>
