--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#28334a</color>
+    <color name="colorPrimaryDark">#212b40</color>
+    <color name="colorAccent">#148bee</color>
+    <color name="backgroundColor">#BF212b40</color>
+
+    <color name="primaryTextColor">#FFFFFF</color>
+    <color name="secondaryTextColor">#8C8C8C</color>
+    <color name="tertiaryTextColor">#7e8795</color>
+    <color name="quaternaryTextColo">#b9b9b9</color>
+
+
+
 </resources>
