--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,13 +16,14 @@
     </style>
 
     <style name="Text.Primary" parent="Text">
-        <item name="android:textColorPrimary">@color/primaryTextColor</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Text.Secondary" parent="Text">
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
     </style>
 
     <style name="label_value">
